2011-11-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/tclsh.1:  Use the same shebang comment everywhere.
	* tools/str2c
	* tools/tcltk-man2html.tcl

2011-11-22  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclCmdAH.c:   [Bug 2935503] Windows: file mtime
	* generic/tclIOUtil.c:  sets wrong time

2011-10-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinFile.c:    [Bug 2935503] Incorrect mode field
	returned by file stat command

2011-10-07  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinChan.c:    Fix various gcc warnings
	* win/tclWinConsole.c: (discovered with latest
	* win/tclWinNotify.c:  mingw, based on gcc 4.6.1)
	* win/tclWinReg.c:
	* tests/env.test:      Fix env.test, when running
	under wine 1.3 (partly backported from Tcl 8.6)

2011-09-26  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/rules.vc:  Support Visual Studio 11

2011-09-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tcl.h:        Don't change Tcl_UniChar type when
	* generic/regcustom.h:  TCL_UTF_MAX == 4 (not supported anyway)

2011-09-13  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclUtil.c:	[Bug 3390638] Workaround broken solaris
	studio cc optimizer.  Thanks to Wolfgang S. Kechel.

	* generic/tclDTrace.d:	[Bug 3405652] Portability workaround for
	broken system DTrace support.  Thanks to Dagobert Michelson.

2011-09-12  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinPort.h: [Bug 3407070] tclPosixStr.c won't build with
	EOVERFLOW==E2BIG

2011-09-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tcl.decls: Tcl_HashStats does not return a CONST
	* generic/tclDecls.h: (Backported from Tcl 8.5)
	* generic/tclHash.c:
	* generic/tclVar.c:
	* unix/tcl.m4:    Add --disable-rpath option to configure
	* unix/configure: script (backported from Tcl 8.5)

2011-08-30  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4:    Make SHLIB_LD_LIBS='${LIBS}' the default and
	* unix/configure: set to "" on per-platform necessary basis.